modified:   backend/node_modules/.bin/mime 	new file:   backend/node_modules/.bin/mime.cmd 	new file:   backend/node_modules/.bin/mime.ps1 	modified:   backend/node_modules/.bin/mkdirp 	new file:   backend/node_modules/.bin/mkdirp.cmd 	new file:   backend/node_modules/.bin/mkdirp.ps1 	modified:   backend/node_modules/.bin/nodemon 	new file:   backend/node_modules/.bin/nodemon.cmd 	new file:   backend/node_modules/.bin/nodemon.ps1 	modified:   backend/node_modules/.bin/nodetouch 	new file:   backend/node_modules/.bin/nodetouch.cmd 	new file:   backend/node_modules/.bin/nodetouch.ps1 	modified:   backend/node_modules/.bin/nopt 	new file:   backend/node_modules/.bin/nopt.cmd 	new file:   backend/node_modules/.bin/nopt.ps1 	modified:   backend/node_modules/.bin/semver 	new file:   backend/node_modules/.bin/semver.cmd 	new file:   backend/node_modules/.bin/semver.ps1 	modified:   backend/node_modules/.package-lock.json 	new file:   backend/node_modules/mongoose/, 	modified:   backend/node_modules/mongoose/dist/browser.umd.js 	modified:   backend/node_modules/mongoose/lib/document.js 	modified:   backend/node_modules/mongoose/lib/helpers/model/castBulkWrite.js 	modified:   backend/node_modules/mongoose/lib/helpers/populate/getModelsMapForPopulate.js 	modified:   backend/node_modules/mongoose/lib/model.js 	modified:   backend/node_modules/mongoose/lib/schema.js 	modified:   backend/node_modules/mongoose/lib/schema/documentArray.js 	modified:   backend/node_modules/mongoose/lib/virtualType.js 	modified:   backend/node_modules/mongoose/package.json 	modified:   backend/node_modules/mongoose/types/index.d.ts 	modified:   backend/node_modules/mongoose/types/inferschematype.d.ts 	modified:   backend/node_modules/mongoose/types/models.d.ts 	modified:   backend/node_modules/mongoose/types/query.d.ts 	modified:   backend/package-lock.json 	modified:   backend/package.json 	new file:   backend/src/controller/boatController.js 	new file:   backend/src/controller/reservationsControll

--- a/frontend/src/pages/Bootübersicht/Bootübersicht.css
+++ b/frontend/src/pages/Bootübersicht/Bootübersicht.css
@@ -33,6 +33,12 @@
   overflow: scroll;
   margin-inline: 5%;
   position: relative;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.boote::-webkit-scrollbar {
+  display: none;
 }
 
 .boot {
@@ -61,7 +67,8 @@
 .add {
   width: 100px;
   position: sticky;
-  left: 90%;
+  left: 99%;
+  margin-right: -18px;
   transition: 0.2s;
 }
 
